# runpod-insanely-fast-whisper

./: Dockerfile  pyproject.toml  test_input.json
runpod_insanely_fast_whisper/: main.py
runpod_insanely_fast_whisper/model/: generation_config.json
