[tool.poetry]
name = "runpod-insanely-fast-whisper"
version = "0.1.0"
description = ""
authors = ["sebas <sebdeveloper6952@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.0"
transformers = "^4.35.0"
optimum = "^1.14.0"
srt = "^3.5.3"
runpod = "^1.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
